--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -1,4 +1,30 @@
 /*
 Root vars. STANDARD FONTS AND COLORS 
 */
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800");
+html {
+  scroll-behavior: smooth;
+}
+
+article {
+  font-family: 'Open Sans', sans-serif;
+  max-width: 1200px;
+  margin: 16px auto;
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  padding: 16px;
+}
+
+article h1, article h2, article h3 {
+  font-weight: 400;
+}
+
+article img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
 /*# sourceMappingURL=styles.css.map */
