--- a/res/css/styles.scss
+++ b/res/css/styles.scss
@@ -3,3 +3,28 @@
 @import 'mqs';
 @import 'misc';
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+
+
+html {
+    scroll-behavior: smooth;
+}
+
+article {
+    font-family: 'Open Sans', sans-serif;
+    max-width: 1200px;
+    margin: 16px auto;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    padding: 16px;
+
+    h1, h2, h3 {
+        font-weight: 400;
+    }
+
+    img {
+        width: 100%;
+        height: auto;
+        object-fit: cover;
+        object-position: center;
+    }
+}
